added driver for slick 3

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,4 +4,5 @@ play.evolutions.enabled = true
 # https://www.playframework.com/documentation/latest/Configuration
 slick.dbs.default.profile = "slick.jdbc.SQLiteProfile$"
 slick.dbs.default.db.driver = "org.sqlite.JDBC"
+slick.dbs.default.db.properties.driver = "org.sqlite.JDBC"
 slick.dbs.default.db.url = "jdbc:sqlite:./sharad.db"
